prevent overlap

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -136,7 +136,7 @@
       display: none;
     }
     .header__contact {
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.1rem;
     }
   }
 
