--- a/src/styles/units.scss
+++ b/src/styles/units.scss
@@ -10,5 +10,5 @@ $border-width: 0.2rem;
 $underline-width: 0.1rem;
 
 $bp-small: 800px;
-$bp-medium: 1000px;
+$bp-medium: 900px;
 $bp-large: $max-width;
